--- a/themes/protected.css
+++ b/themes/protected.css
@@ -1,5 +1,67 @@
+
+.dropDownMenu {
+    position: fixed;
+    display: flex;
+    overflow: hidden;
+    flex-direction: column;
+    justify-content: left;
+    align-items: left;
+    text-align: left;
+    padding: 0;
+    background: #ddd;
+    color: black;
+    z-index: 998;
+    border-radius: 2px;
+    left: 0;
+    top: 0;
+    transform: scaleY(0);
+    transform-origin: top;
+    box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, .5);
+}
+
+.dropDownMenuIcon {
+    font-size: 22px;
+}
+
+.dropDownMenuButton {
+    background: linear-gradient(#fff, #ccc);
+    display: flex;
+    color: black;
+    padding: 5px 20px;
+    margin: 0;
+    border-radius: 2px;
+    cursor:pointer;
+    transition: background 100ms ease;
+    justify-content: left;
+    align-items: center;
+
+}
+.dropDownMenuButton:hover {
+    background: linear-gradient(#df8, #cf0);
+}
+
+.dropDown_red {
+    background: linear-gradient(#f55, #f33);
+}
+.dropDown_red:hover {
+    background: linear-gradient(#f88, #f66);
+
+}
+
+.dropDownMenuButton:active {
+    transition: none;
+    background: rgba(255, 255, 255, 0.6);
+
+}
+
+.dropDownMenuText {
+    margin-left: 30px;
+}
 ._rightAlign {
     text-align: right !important;
+}
+._leftAlign {
+    text-align: left !important;
 }
 
 a {
@@ -76,6 +138,7 @@ a {
     transition: box-shadow 100ms ease;
 }
 ._HOVER_border:hover {
+    cursor: pointer;
     box-shadow: 0 0 0 2px white, 0 0 0 4px black;
 }
 
@@ -107,6 +170,7 @@ a {
 
 
 ._HOVER_BORDER:hover {
+   
     box-shadow: 0 0 0 2px white, 0 0 0 4px black;
     transition: box-shadow 100ms ease;
 }
@@ -124,7 +188,7 @@ a {
     scrollbar-width: none;
     /* Firefox */
     /* background: #888; */
-    background-image: url("resources/pattern2.svg");
+    background-image: url("resources/pattern5.svg");
     position: fixed;
     padding: 0;
     overflow: auto;
@@ -139,11 +203,6 @@ a {
     display: flex;
     justify-content: center;
     
-}
-
-.shrinkmainframe {
-/*     width: calc(100% - 310px) !important;
-    margin-left: 250px; */
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -240,7 +299,7 @@ a {
 }
 
 #spinner {
-    z-index: 200;
+    z-index: 999;
     position: absolute;
     display: flex;
     opacity: 1;
@@ -287,6 +346,47 @@ a {
     background: #8b5;
 }
 
+.color_cf0 {
+    background: #cf0;
+    color: black;
+}
+
+.textcolor_cf0 {
+    color: #cf0;
+}
+
+.padding10px {
+    padding: 10px;
+}
+
+
+.btn5 {
+    transition: background 100ms ease-in-out;
+    text-decoration: underline;
+    background: none;
+    padding: 10px;
+    text-align: center;
+    margin: 0;
+}
+.btn5:hover {
+    background: rgba(0, 0, 0, .5);
+    color: white;
+}
+
+.btn6 {
+    transition: background 100ms ease-in-out;
+    background: #cf0;
+    color: black;
+    font-weight: 900;
+    padding: 5px 15px;
+    border-radius: 10px;
+}
+.btn6:hover {
+    background: #df8;
+    
+
+}
+
 .class_alert {
     position: fixed;
     display: flex;
@@ -300,7 +400,7 @@ a {
     opacity: 1;
     backdrop-filter: blur(10px);
     background: rgba(0, 0, 0, .4);
-    z-index: 100;
+    z-index: 999;
 }
 
 .class_alert > div {
